[package]
authors       = [ "Your Name <your.email@example.com>" ]
categories    = [ "config", "encoding" ]
description   = "A simple TOML configuration manager with nested key access and type-safe deserialization"
documentation = "https://docs.rs/toml_config"
edition       = "2024"
homepage      = "https://github.com/yourusername/toml_config"
keywords      = [ "config", "configuration", "toml" ]
license       = "MIT OR Apache-2.0"
name          = "tomlreadwr"
readme        = "README.md"
repository    = "https://github.com/yourusername/toml_config"
version       = "0.1.0"

[dependencies]
anyhow = "1.0.100"
serde  = { version = "*", features = [ "derive" ] }
toml   = "0.9.7"
